syntax = "proto3";

message NamePb {
    string firstName = 1;
    repeated string middleName = 2;
    string lastName = 3;
    string canonicalName =4 ;
}
